--- a/html/index4.html
+++ b/html/index4.html
@@ -23,7 +23,7 @@
   <body>
     <div class="wrapper">
       <div class="head_bg"></div>
-      <div class="picture"></div>
+      <div class="picture_bg"></div>
       <div class="main">
         <head>
           <div class="head">
@@ -51,140 +51,7 @@
         </head>
         <section>
           <div class="section">
-            <div class="header"><i>Рут Оркин: жизнь как кино</i></div>
-            <div class="text">
-              Талант фотографа-документалиста Рут Оркин (Ruth Orkin's) в том,
-              что она умела видеть обыденность как захватывающее эстетичное
-              кино. Её меткий взгляд выхватывал из уличной кутерьмы именно те
-              сцены, которые хотелось разгадывать, домысливать, вдохновляться.
-              Не из её ли культового снимка из серии «Американка в Италии», на
-              котором утонченная девушка идет сквозь толпу, провожающих её
-              взглядом, мужчин, родилась драма Джузеппе Торнаторе «Малена»? За
-              свою не слишком долгую жизнь Рут Оркин успела примерить несколько
-              ролей. Она зарекомендовала себя как талантливый мастер репортажной
-              и уличной фотографии, вместе с мужем-фотографом сняла успешное
-              кино – первый независимый американский фильм, который стал
-              прообразом для кинематографистов французской новой волны. Когда в
-              силу обстоятельств и болезни она не смогла покидать пределы
-              квартиры с видом на Центральный парк, Рут снимала живописные
-              картины мира со своего пятнадцатого этажа.</br> Рут Оркин родилась в
-              Бостоне в 1921 году, но благодаря матери – актрисе немого кино и
-              водевилей Мэри Руби буквально выросла в Голливуде в его «золотую
-              эпоху». Отец девочки – Сэмюэль Оркин занимался производством
-              коллекционных игрушечных корабликов. С ранних лет Рут была заядлым
-              синефилом. Каждый фильм, который смотрела, она заносила в
-              специальную тетрадь, присуждая ему оценку – от одной до пяти
-              звёзд. Когда в десять лет у неё появилась первая камера – простой
-              и дешевый Univex, девочка начала фотографировать звёзд, с которыми
-              сталкивалась на киностудии, обычно она просила об автографе и
-              возможности сделать снимок.</br> Странно и непостижимо, но в 17-летнем
-              возрасте ей удалось уговорить родителей позволить ей в одиночку
-              отправиться на велосипеде из Калифорнии в Нью-Йорк на Всемирную
-              выставку 1939 года. Она преодолела более двух тысяч миль, снимая в
-              пути и записывая увиденное в специальный дневник. Рут грезила о
-              карьера в кино. В 1943 году на какое-то время она устроилась
-              посыльным студии, ей казалось это отличной возможностью стать
-              режиссером. Вскоре она уволилась, узнав, что в союз
-              кинематографистов не принимают женщин. Во время второй мировой
-              войны Рут предприняла еще одну попытку, вступив в Женский
-              вспомогательный армейских корпус. Она увидела в объявлении
-              информацию о курсах кинорежиссеров, но и тут её ждала неудача.</br>
-              «Именно тогда я решила стать фотожурналистом», - вспоминала Рут.</br>
-              Несмотря на непродолжительное обучение в городском колледже
-              Лос-Анджелеса по специальности «фотожурналистика», она была
-              самоучкой. Еще в юности, с появлением первого фотоаппарата,
-              приобрела вместе с ним брошюру Уильяма М. Стронка «Как научиться
-              фотографировать». Один из советов гласил – купите и изучите как
-              можно больше книг по фотографии. Рут, загоревшись этой идеей,
-              самостоятельно изучила абсолютно все, что было доступно по этой
-              теме в публичной библиотеке Лос-Анджелеса. Она неустанно
-              практиковалась и в 1943 году переехала в Нью-Йорк. В закатные часы
-              снимала в ночных клубах, а утром ловила свои любимые «киношные»
-              сцены на улицах. Девушке достаточно было отправиться с
-              фотоаппаратом на Пенсильванский вокзал, чтобы снять настоящую
-              жизненную историю. Ей нравилось запечатлевать людей в естественных
-              и живописных позах. Именно тут, на вокзале, была снята одна из её
-              знаменитых фотографий – портрет мужчины, который напоминает статую
-              Давида Микеланджело.</br> По заданию New York Times Рут Оркин снимала
-              многих знаменитостей. Она была большим поклонником классической
-              музыки и часто по собственной инициативе запечатлевала знаковых
-              музыкальных деятелей той эпохи. Ей нравилось снимать звезд
-              буднично, без лоска и гламура. Портрет пианиста Леонарда
-              Бернстайна без рубашки, с зажжённой спичкой, моментально выделил
-              её среди сонма светских хроникеров.</br> В 1951 году случилось её
-              первое большое путешествие по Европе. Рут вновь отважилась
-              отправиться в него в одиночку. Во Флоренции 29-летняя Оркин
-              остановилась в самом дешевом отеле, который стоил доллар за ночь.
-              В коридоре она повстречала такую же, как она сама
-              девушку-путешественницу – американку Нинали Крейг , которая
-              окончила колледж по специальности «История искусств» и отправилась
-              в путешествие из Нью-Йорка на корабле третьего класса. Девушка
-              планировала увидеть Италию, Францию, Испанию, изучать местные
-              достопримечательности и делать наброски. Рут предложила ей немного
-              пофотографироваться.</br> «Если я опубликую фотографии, то получу
-              пятнадцать долларов и смогу подольше задержаться тут» - сказала
-              она, уговаривая Нинали на фотопрогулку. «На следующее утро мы
-              отправились в город и просто валяли дурака, - вспоминает героиня
-              снимков. – Мы были двумя молодыми, беззаботными, забавляющиеся
-              идеей путешествия в одиночку для женщины».</br> Высокая, статная
-              девушка любовалась статуями, спрашивала дорогу, торговалась на
-              рынках, флиртовала в кафе. Все это ловила Рут на свою камеру, сама
-              того не осознавая, создавая настоящую киноповесть. Момент, когда
-              Нинали (для фотосессии она взяла себе псевдоним Джинкс Аллен)
-              пробирается сквозь толпу темпераментных итальянцев, она ухватила
-              мгновенно. Это не было постановкой. Рут лишь окликнула мужчин и
-              попросила их не смотреть в камеру. Также она предложила девушке
-              пройтись еще раз, чтобы быть уверенной, что снимок получился.
-              Всего с двух попыток была снята фотография, которая стала
-              легендарной и основополагающей в карьере Рут Оркин, та самая
-              жемчужина её фотоархива – «Американская девушка в Италии».</br>
-              Вернувшись в Нью-Йорк, Оркин присоединилась к местной «Фотолиге»,
-              снимавшей рабочий класс и бедные кварталы города. В «Фотолиге» она
-              познакомилась с коллегой Морисом Энгелем, который в 1952 году стал
-              её мужем. Вместе с Морисом Рут наконец-то удалось воплотить свою
-              давнюю мечту о кино. Совместно они сняли несколько фильмов, каждый
-              из которых был новым словом в кинематографе. Одна из самых
-              знаковых работ – полнометражный фильм «Маленький беглец» о
-              мальчике из Нью-Йорка, ошибочно решившем, что он убил старшего
-              брата и теперь вынужден бежать. Пара была совершенными новичками в
-              кино, это дало им возможность не мыслить стереотипно и создать
-              по-настоящему новый киноязык. Для съёмок на натуре Кони-Айленда
-              они использовали легкую 35-миллиметровую камеру, позволяющую кадру
-              быть быстрым и спонтанным. Годы спустя Трюффо и Кассаветис
-              позаимствовали этот прием. Сам Трюффо не раз говорил, что
-              «Маленький беглец» послужил вдохновением для его «400 ударов», а
-              также то, что эта картина стала импульсом для французской «новой
-              волны».</br> Материнство не стало для Оркин препятствием в карьере, но
-              развернуло её личное творчество в иную сторону. В 1960-е она
-              иронично представлялась: «я домохозяйка и живописный фотограф».
-              Дочь Рут вспоминает мать, которая по-прежнему не выпускала
-              фотоаппарат из рук, снимая «самый замечательный семейный альбом».</br>
-              «У нас в каждой комнате стоял прожектор по 500 ват. Это, ни в коем
-              случае, не было навязчиво. Она просто хотела быть всегда готовой,
-              не упустить важный кадр. Так была снята моя любимая фотография, на
-              которой я подражаю отцу, который бреется». Болезнь, с которой
-              Оркин пыталась справиться 17 лет, сделала её затворницей квартиры
-              в живописном районе с видом на Центральный Парк. Не отчаиваясь,
-              она продолжила снимать улицу из окна. Так появились знаменитые
-              книги – «Мир за моим окном» (1978), «Ещё картинки из моего окна»
-              (1983). Она снимала времена года, как вид парка меняет снег,
-              туман, солнечный свет, осенние краски.</br> Рут Оркин не стало 16
-              января 1985 года, ей было 63 года. Заботу об обширном архиве
-              фотографий взяла на себя дочь Оркин – Мэри Энджел. Также после
-              смерти отца в 2005 году, она занялась упорядочиванием и его
-              фотоархива.</br> Спустя годы Мэри Энджел основала организацию, цель
-              которой – сохранить и показать миру подобные частные фотоархивы.
-              Среди многочисленных наград Оркрин – звание одной из лучших
-              женщин-фотографов США, наравне с Доротеей Ланж и Маргарет
-              Бурк-Уайт. Преданная своему делу, она стала своего рода
-              первопроходцем, одной из первых женщин, превративших
-              фотожурналистику в профессию и дело всей жизни. «Быть фотографом –
-              значит, заставлять людей смотреть на то, что я хочу, чтобы они
-              смотрели», - повторяла Рут. Её кинематографичный мир, показанный
-              через призму любви к людям, большого интереса к их «маленьким
-              историям», кадр за кадром превратился в одну большую добрую,
-              участливую повесть о человеке.
-            </div>
+            
             <div class="container">
               <div class="col-lg-12">
                 <h2 class="text-center">Comment</h2>
