--- a/html/index5.html
+++ b/html/index5.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Войти</title>
+    <title>Login in</title>
     <link rel="stylesheet" href="../style/style5.css" />
   </head>
   <body>
@@ -66,7 +66,6 @@
             <div class="line"></div>
             <div></div>
           </div>
-          <div id="disqus_thread"></div>
         </section>
       </div>
     </div>
